--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,11 +1,13 @@
-name: Security audit
 on:
   push:
     paths:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+
+name: Security Audit
+
 jobs:
-  security_audit:
+  security-audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
