--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,5 @@
-[package]
-name = "codility-rs"
-version = "0.1.0"
-authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
-edition = "2018"
-
-[dependencies]
-
-[lib]
-name = "binary_gap"
-path = "src/binary-gap/lib.rs"
+[workspace]
+members = [
+    "src/binary-gap",
+    "src/cyclic-rotation",
+]
