--- a/grcov.yaml
+++ b/grcov.yaml
@@ -1,13 +1,9 @@
+branch: true
 ignore-not-existing: true
 llvm: true
+filter: covered
 output-type: lcov
-output-path: ./
+output-path: ./lcov.info
 ignore:
   - "/*"
   - "../*"
-  - "**/examples/**"
-  - "**/main.rs"
-excl-line: "#\\[derive\\("
-excl-br-line: "#\\[derive\\("
-excl-start: "mod test \\{"
-excl-br-start: "mod test \\{"
